# LLVM-Optimization-Pass

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  available-cse.cc  test1.ll
pass/: CMakeLists.txt  scr.sh  test2.ll
